[package]
name = "rust-rocket"
version = "0.11.2"
authors = [
  "Tim Peters <mail@darksecond.nl>",
  "Lauri Gustafsson <lauri.gustafsson@iki.fi>",
]
license = "MIT"
description = """
A client implementation of GNU Rocket.
"""
repository = "https://github.com/demoscene-rs/rust-rocket"
edition = "2018"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true

[features]
simple = ["bincode"] # Enables the simple API
player = ["simple"]  # Makes the simple API behave as a file player, not a client

[dependencies]
byteorder = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "2", features = ["derive"], optional = true }

[[example]]
name = "edit"
required-features = ["bincode"]

[[example]]
name = "play"
required-features = ["bincode"]

[[example]]
name = "simple"
required-features = ["simple"]
